--- a/TorrentWizard/TorrentWizard.rc
+++ b/TorrentWizard/TorrentWizard.rc
@@ -145,6 +145,7 @@ BEGIN
     LTEXT           "Your Torrent may reference a tracker URL that clients will contact when downloading it.  Please type your tracker URL in the box below, or select from one of the URLs you have used recently.",IDC_STATIC,15,95,300,25
     LTEXT           "Type or select a tracker URL:",IDC_STATIC,15,130,300,10
     COMBOBOX        IDC_TRACKER,15,145,300,140,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Private torrent",IDC_PRIVATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,165,63,10
     PUSHBUTTON      "&Clear List",IDC_CLEAR_TRACKERS,265,165,50,15
     LTEXT           "When you have made your selection, click Next to add comments to your Torrent file.",IDC_STATIC,15,190,300,10
 END
@@ -204,8 +205,10 @@ BEGIN
     LTEXT           "Add Comments",IDC_TITLE,15,15,300,10
     LTEXT           "If you wish, you can include some comments text in your Torrent file.  This is an optional step, as a Torrent file does not need comments to work correctly.",IDC_STATIC,15,35,300,20
     LTEXT           "If you wish, type some comments in the space below:",IDC_STATIC,15,75,300,10
-    EDITTEXT        IDC_COMMENT,15,90,300,60,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
+    EDITTEXT        IDC_COMMENT,15,90,300,52,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
     LTEXT           "When you have finished, or if you do not wish to add comments to this Torrent, click the Next button to choose where to save your completed Torrent file.",IDC_STATIC,15,180,300,20
+    EDITTEXT        IDC_SOURCE,15,158,300,14,ES_AUTOHSCROLL
+    LTEXT           "Source of torrent, for example publisher name (optional):",IDC_STATIC,15,145,300,10
 END
 
 
@@ -293,8 +296,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,2,0,0
- PRODUCTVERSION 2,7,1,0
+ FILEVERSION 1,3,0,0
+ PRODUCTVERSION 2,7,1,1
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -311,12 +314,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Torrent Wizard"
-            VALUE "FileVersion", "1.2.0.0"
+            VALUE "FileVersion", "1.3.0.0"
             VALUE "InternalName", "TorrentWizard"
-            VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2003-2012. All rights reserved."
+            VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2003-2014. All rights reserved."
             VALUE "OriginalFilename", "TorrentWizard.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2.7.1.0"
+            VALUE "ProductVersion", "2.7.1.1"
         END
     END
     BLOCK "VarFileInfo"
