--- a/TorrentWizard/TorrentWizard_10.vcxproj
+++ b/TorrentWizard/TorrentWizard_10.vcxproj
@@ -296,4 +296,9 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="TorrentWizard.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
